add: pagina principal ok

--- a/src/app/public/components/header/header.component.html
+++ b/src/app/public/components/header/header.component.html
@@ -4,5 +4,11 @@
     [class.header__toggle--active]="state"
     (click)="toggle()"
   ></section>
-  <a class="header__button"> Hire me </a>
+  <a
+    class="btn"
+    target="_blank"
+    href="https://wa.me/56936265676?text=Hola%20Matías,%20vengo%20desde%20tu%20sitio%20https://espinozah.cl"
+  >
+    ¡Hablame!
+  </a>
 </header>
