--- a/src/theme/main.scss
+++ b/src/theme/main.scss
@@ -1,3 +1,24 @@
 /* You can add global styles to this file, and also import other style files */
 @import './variables';
 @import './base';
+
+.cover {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+} // .cover
+
+.btn {
+  position: relative;
+  display: inline-block;
+  padding: 0.625rem 1.25rem;
+  text-decoration: none;
+  background-color: $secondary-color;
+  color: $light-color;
+  font-weight: $weight-bold;
+  border-radius: 0.25rem;
+  letter-spacing: 1px;
+}
