update: se cambio el mensaje de la presetacion

--- a/src/app/public/components/presentation/presentation.component.html
+++ b/src/app/public/components/presentation/presentation.component.html
@@ -4,10 +4,18 @@
     <span class="name"> Matías Espinoza </span>
   </h1>
   <p class="presentation__desc">
-    Lorem ipsum dolor sit amet consectetur adipisicing elit. Vel nulla modi omnis laborum. Veniam
-    magnam et minus laborum necessitatibus aut, eius, recusandae ratione ducimus numquam eaque
-    officia? Voluptatum, tenetur suscipit.
+    Un joven de 28 años que durante los últimos 5 años me he dedicado al desarrollo de software en
+    variadas industrias y empresas como WOM, Habitat, Metlife, Consorcio en sus retiros del 10% y
+    actualmente en Chilebots emprendiendo con robótica y la automatización de las últimas millas del
+    retail.
   </p>
+
+  <p class="presentation__desc">
+    Soy apasionado por el Tenis, Ajedrez y el Futbol hincha de la Universidad Católica. Amante de
+    estudiar y aprender sobre las plataformas cloud como GCP y AWS.
+  </p>
+
+  <p class="presentation__quote">"Intenta y falla, pero nunca dejes de intentar"</p>
 
   <a class="btn"> Descargar CV </a>
 </section>
